--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
-
 body {
   background: #FFFEFA 0% 0% no-repeat padding-box;
+  width: 96%;
   opacity: 1;
 }
 
@@ -14,19 +14,19 @@ body {
 }
 
 .intro-text {
-  padding-top: 450px;
+  padding-top: 300px;
   padding-right: 94px;
-  font: normal normal normal 80px/90px PT Mono;
+  font: normal normal normal 65px/75px 'PT Mono';
   letter-spacing: -6.4px;
   color: #707070;
 }
 
 .intro-img {
-  margin-top: 393px;
+  margin-top: 240px;
 }
 
 .intro-text .highlight {
-  font: normal normal bold 80px/90px PT Mono;
+  font: normal normal bold 65px/75px 'PT Mono';
   letter-spacing: -6.4px;
   color: #F6B0A3;
 }
@@ -34,13 +34,20 @@ body {
 .second-page-text {
   margin-top: 127px;
   margin-right: 94px;
-  font: normal normal normal 80px/90px PT Mono;
+  font: normal normal normal 65px/75px 'PT Mono';
   letter-spacing: -6.4px;
   color: #707070;
 }
 
 .second-page-img {
   margin-top: 127px;
+  margin-left: 300px;
+}
+
+.second-page-text .highlight {
+  font: normal normal bold 65px/75px 'PT Mono';
+  letter-spacing: -6.4px;
+  color: #F6B0A3;
 }
 
 .contact {
@@ -61,7 +68,7 @@ body {
 .portfolio-type {
   margin-bottom: 16px;
   text-align: left;
-  font: normal normal bold 48px/53px PT Mono;
+  font: normal normal bold 48px/53px 'PT Mono';
   letter-spacing: -3.84px;
   color: #707070;
   opacity: 0.5;
@@ -70,7 +77,7 @@ body {
 .portfolio-title {
   margin-bottom: 48px;
   text-align: left;
-  font: normal normal normal 80px/90px PT Mono;
+  font: normal normal normal 65px/75px 'PT Mono';
   letter-spacing: -6.4px;
   color: #707070;
   opacity: 1;
@@ -78,7 +85,7 @@ body {
 
 .portfolio-description {
   text-align: left;
-  font: normal normal normal 48px/53px PT Mono;
+  font: normal normal normal 48px/53px 'PT Mono';
   letter-spacing: -3.84px;
   color: #707070;
   opacity: 1;
@@ -95,7 +102,7 @@ opacity: 1;
   border-radius: 60px;
   color: #707070;
   text-align: left;
-  font: normal normal normal 48px/53px PT Mono;
+  font: normal normal normal 48px/53px 'PT Mono';
   letter-spacing: -3.84px;
   color: #707070;
   opacity: 1;
